# lingprops_test

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  Web_Appendix_Concreteness.docx  analysis_log.txt  benchmark_wsd.py  generate_web_appendix.py  pyproject.toml
.github/workflows/: python-package.yml
src/lingprops/: __init__.py  _concreteness_legacy.py  concreteness.py  exact_count.py  ner.py  tangibility.py  wsd.py
src/lingprops/scripts/: concreteness_cli.py
tests/: test_smoke.py
