[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingprops"
version = "0.1.0"
description = "Linguistic property utilities (concreteness, etc.)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
keywords = ["nlp", "linguistics", "concreteness", "wordnet", "nltk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "nltk>=3.8",
    "tqdm>=4.60",
    "openpyxl>=3.0",
    "xlrd>=2.0",
    # spaCy is the default backend for `compute_concreteness(..., ner=True)`,
    # which is on by default.  After install, run once:
    #   python -m spacy download en_core_web_sm
    # or in Python:
    #   from lingprops import ensure_spacy_model; ensure_spacy_model()
    "spacy>=3.4",
]

[project.optional-dependencies]
# Neural WSD strategy (`compute_concreteness(..., wsd="neural")`)
neural = [
    "sentence-transformers>=2.2",
]

[project.urls]
Homepage = "https://github.com/yourname/lingprops"
Issues = "https://github.com/yourname/lingprops/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
lingprops = ["data/*.xls", "data/*.xlsx", "data/*.csv"]
